# infrastructure

./: .agenix.toml  .envrc  .gitattributes  .gitignore  README.md  buildkite.yml  darwin-configuration.nix  enter-env.sh  flake.nix  make-targets.sh  network.nix  old-enter-env.sh  shell.nix  ssh-keys.nix  update-macos.sh
ci/: collect-garbage.sh  reboot-individual.sh  terraform-apply.sh  terraform-base-apply.yml  terraform-deploy.yml  terraform-import.yml  terraform-plan.sh  terraform-rabbit-apply.yml  terraform-rabbit-plan.yml  terraform-rabbitmq-apply.yml  terraform-rabbitmq-plan.yml
docs/: adding-an-instance.md
hetzner-server/: bootstrap-configuration.nix  format.sh  setup-rescue.sh
morph-network/: default.nix  known_hosts
morph-network/machines/: core-next.system.nix  core.system.nix  macofborg1.expr.nix  macofborg1.system.nix  ofborg-evaluator-0.system.nix  ofborg-evaluator-1.system.nix  ofborg-evaluator-2.system.nix  (+7 more)
nix/: default.nix  nixpkgs.json  overlay.nix  sources.json  terraform-provider-nixos.nix  update-nixpkgs.sh
nix/poetry/: pyproject.toml
nixops/: network.nix
private/: github.key  graham-id_rsa.pub  local.nix  provisioning-key  provisioning-key.pub  spotinst-config.sh
secrets/: cloudamqp.key  local.nix
spotinst/: config.sh  create.sh  instances.json  interp.nix  load.sh  plan.sh
terraform/: .gitignore  .terraform.lock.hcl  builders.tf  core.tf  dns.tf  enumerate-servers.sh  evaluators.tf  packet-evaluators.tf  packet.tf  rabbitmq.tf  shell.nix  state.tf
terraform-old/: builders.tf  rabbitmq.tf
website/: index.html  styles.css
(+78 files in other folders)
