[tool.poetry]
name = "nixopsenv"
version = "0.1.0"
description = ""
authors = [ "graham@grahamc.com" ]

[tool.poetry.dependencies]
python = "^3.7"
nixops = {git = "https://github.com/grahamc/nixops.git", rev = "integration"}
nixops-packet = {git = "https://github.com/grahamc/nixops-packet.git", rev = "poetry"}
#nixops = { path = "../../github.com/NixOS/nixops" }
#nixopspacket = {path = "../../github.com/input-output-hk/nixops-packet"}


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
